# silver-phys437

./: .gitignore  README.md  content.ipynb  pyproject.toml  requirements.txt
silver/: D01_Discrete_Fourier_Transform.ipynb  D02_Quantum_Fourier_Transform.ipynb  D02_Quantum_Fourier_Transform_Solutions.ipynb  D03_Phase_Estimation.ipynb  D03_Phase_Estimation_Solutions.ipynb  D04_Order_Finding_Algorithm.ipynb  D04_Order_Finding_Algorithm_Solutions.ipynb  D05_Shors_Algorithm.ipynb  D06_Shors_Algorithm_In_More_Detail.ipynb  S00_Credits.ipynb  S01_References.ipynb
silver/silver/: __init__.py  orderFinding.py  phaseEstimation.py
test/: Qiskit_installation_and_test.ipynb
